@@ -1,3 +1,8 @@
+	* Fixed issue 293: Wildcard _ could not match types that can be
+	  constructed from any type. This fix unfortunately turns off conversion
+	  warnings for REQUIRE_CALL and friends when building with gcc. Thank
+	  you @TimonNoethlichs for reporting.
+
 	* Fixed issue 296: Improved sequence violation message when ALLOW_CALL
 	  is involved. Thank you Sigurður Sveinn Halldórsson for reporting.
 
